# CropgeneratorOOP

./: .gitignore  display.py  main.py  parameters.py  paths.py  pyproject.toml
cropgen/: __init__.py  main.py
cropgen/external_interfaces/: LabelStudioInterface.py  OracleBucketInterface.py  simplify_export.py
cropgen/processing/: AnnotatedPage.py  ImageBox.py  Paragraph.py  TextFragment.py
cropgen/shared/: PathBundle.py  default_parameters.py
cropgen/splitter/: main.ipynb  statistical_report.py
cropgen/tests/: conftest.py  test_path_bundle.py  tests_helper.py
downloaders/: LabelStudioInterface.py  download_from_bucket.py
external_interfaces/: LabelStudioInterface.py  OracleBucketInterface.py  download_from_bucket.py  simplify_export.py
kaggle_integration/: PathBundle.py
labelstudio/: LabelStudioInterface.py  simplify_export.py
preprocessing/: AnnotatedPage.py  ImageBox.py  Paragraph.py  TextFragment.py
preprocessing/classes/: AnnotatedPage.py  ImageBox.py  TextFragment.py  helper_to_classes.py
preprocessing/helpers/: helper_to_classes.py  text_replacements.py
preprocessing/simplify/: simplify_export.py
preprocessing/tests/: test_AnnotatedPage.py  test_audit_annotations.py  test_intersections.py  test_rotation.py
processing/: AnnotatedPage.py  ImageBox.py  Paragraph.py  TextFragment.py
processing/augment_data/: augment_data_sequential.py  helpers.py
processing/checks/: augment_data_sequential.py  pairing_check.ipynb  test_subgraph_generation.py  visual_check.ipynb
processing/helpers/: PairingErrors.py  helper_to_classes.py
processing/parallel/: augment_data_parallel.py  helpers.py
processing/sequential/: augment_data_sequential.py  helpers.py  (+1 more)
shared/: PathBundle.py  default_parameters.py
tests/: conftest.py  tests_helper.py
(+87 files in other folders)
