[project]
name = "cropgeneratoroop"
version = "0.1.0"
description = "First stem in the generation of the dataset for fine-tuning an LLM in vision tasks."
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "label-studio-sdk>=2.0.19",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]
