[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cropgen"
version = "0.1.0"
description = "First step in the generation of the dataset for fine-tuning an LLM in vision tasks."
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "fuzzywuzzy>=0.18.0",
    "ipykernel>=7.2.0",
    "label-studio-sdk>=2.0.19",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
include = ["cropgen*"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
cropgen = { workspace = true }

[dependency-groups]
dev = [
    "cropgen",
]
